# i2c_1602_display

./: cp2112_hidapi.py  hiddriver.py  main.py  pyproject.toml  requirements.txt
